--- a/gb/24/8/21/n14315146.md
+++ b/gb/24/8/21/n14315146.md
@@ -18,35 +18,34 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/24/n14123215.md#1">千叶县馆山市 日本台湾学校美术作品联合展</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313233.md#1">桃园黑猪肉配基隆小卷 张善政谢国梁推两市农渔产</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313297.md#1">力挺谢国梁 蒋万安、李彦秀到安乐市场扫街</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314443.md#1">罗东国中勇夺MIT人工智慧与教育高峰会最佳设计奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314369.md#1">世界儿童画展 基隆深澳国小张以琳荣获特优</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314347.md#1">名额有限 基隆餐桌美食活动国门广场盛大开席</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314119.md#1">人潮涌入鹿野高台 台湾热气球嘉年华落幕</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545465.md#1">童玩30开幕 为秘克琳神父90庆生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544745.md#1">徐少萍高龄驾驶车祸 女骑士截肢、近日过世</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544662.md#1">头城乌石渔港制冰厂上梁 明年初启用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544667.md#1">加强道安工作 基隆推行人友善、行人有序方案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544102.md#1">阳明海运小学堂 培育偏乡优秀海洋领航者</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/30/n10009267.md#1" target="_blank">林辉：相声演员马三立苦涩的“逗你玩”人生</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/4/n10688678.md#1" target="_blank">摆脱人生困境 美国女子重拾幸福</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/8/n11031942.md#1" target="_blank">传奇总统里根（8）：向中国播撒自由精神</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/23/n11741059.md#1" target="_blank">遵循“真善忍”打造的音乐盒专卖店</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312505.md#1">【美国牧师濒死 惊见撒旦控制人类计划】</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309769.md#1">【未解之谜】震惊泰国的当代现世报：无法逃脱的业力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309782.md#1">另外空间的鬼有没有轮回？鬼能自救吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14311467.md#1">巴西空难前一天 灵媒直播预言：我看到坠机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313324.md#1">【时事军事】库尔斯克攻势无停止迹象 乌军将获最远程导弹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313073.md#1">【新闻大破解】美FED慢半拍升息 美股恐慌结束？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312955.md#1">【天亮时分】纽时攻击神韵 谎言背叛与黑幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312233.md#1">狗狗健身房里模仿主人做深蹲 视频火遍全网</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312853.md#1">中共总理李强开会 国防部长董军尴尬台下坐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312918.md#1">厦门大学发“接管台湾”预案 遭全文删除</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313092.md#1">同步晒礼服和戒指 赵丽颖被传与冯绍峰复合？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312608.md#1">关晓彤饰贾元春 新《红楼梦》9小时票房仅90万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313104.md#1">韩星2024年剧酬排名曝光 金秀贤居冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312668.md#1">《死侍与金钢狼》全球票房破10亿 再创新纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313061.md#1">徐峥回应新片消费苦难：没看电影直接喷不公平</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309722.md#1">学会这个技巧 你可以煎太阳蛋、流心蛋、溏心蛋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/14/n14311371.md#1">乐龄族必吃六类食物 增肌减脂、维持认知力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14312095.md#1">日本专家：年过六十 小心五种错误保健方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312462.md#1">新研究：间歇性禁食优于糖尿病药物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313229.md#1">蔬果怎么洗才安全？ 微生物学家这么说</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534405.md#1">他说了一句话  冤孽紧追不舍穿越前生到今生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/8/21/n14315146.htm">基隆特殊教育生美展 谢国梁期许学生勇敢有爱</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315146.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
